# sdt-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SPATIAL_DISPLACEMENT_THEORY.md  compile_commands.json
ATOMICUS/: 001_Deuterium_H_1_1.md  003_Lithium_Li_3_4.md  004_Beryllium_Be_4_5.md  006_Carbon_C_6_6.md  008_Oxygen_O_8_8.md  010_Neon_Ne_10_10.md  012_Magnesium_Mg_12_12.md  015_Phosphorus_P_15_16.md  016_Sulfur_S_16_16.md  017_Chlorine_Cl_17_18.md  019_Potassium_K_19_20.md  023_Vanadium_V_23_28.md  024_Chromium_Cr_24_28.md  027_Cobalt_Co_27_32.md  029_Copper_Cu_29_34.md  030_Zinc_Zn_30_34.md  032_Germanium_Ge_32_42.md  033_Arsenic_As_33_42.md  035_Bromine_Br_35_44.md  037_Rubidium_Rb_37.md  039_Yttrium_Y_39.md  050_Tin_Sn_50.md  (+41 more)
Benchmarks/: CMakeLists.txt  investigation_output.txt  neutrino_investigation.cpp  nuclear_grammar.cpp  nuclear_grammar_heavy.cpp  nuclear_grammar_heavy_output.txt  nuclear_grammar_output.txt
Benchmarks/B01_B25/: benchmarks_b01_b25.cpp
crumpiler/: CMakeLists.txt  README_TEMP.md  decoded2.cpp  decoded_test.cpp  decoded_v2.cpp  diagonal.bmp.sprl  gears.bmp.crmpg  main.cpp  self.crb  skull.bmp.crmpg  skull.crb  skull_quant_exact.crmpg  skull_t16.crmpg  stripes.bmp.sprl  test.crb  test2.crk  test2.crm  test_output.crk  test_output.crm  test_refactor.crk  test_refactor.crm  test_v2.crk
crumpiler/core/: bitstream.hpp  format.hpp  freq_rank.hpp  rings.hpp  types.hpp
crumpiler/decoder/: decoder.hpp
crumpiler/encoder/: binary_crumpler.hpp  delta_scanner.hpp  encoder.hpp  image_crumpler.hpp  lexer.hpp  phrase_finder.hpp  spiral_scanner.hpp
(+645 files in other folders)
